Book/Examples/AWS/23.terraform-save-plan-to-file.tf
# # terraform plan output is a feature in Terraform that allows you to save the execution plan generated by the terraform plan command to a file. This plan file can be used later with the terraform apply command to apply the changes specified in the plan, ensuring that the infrastructure is provisioned exactly as intended. Saving the plan to a file provides a way to review and share the proposed changes before applying them, helping to prevent unintended modifications to your infrastructure.

resource "aws_instance" "example" {
  ami           = "ami-095bd4a11ce8746c0" # Singapore region
  instance_type = "t2.micro"

  tags = {
    Name = "MyEC2Instance"
  }
}

# Example of how to save the plan to a file
# After running terraform plan, you can use the following command to save the plan to a file:
# terraform plan -out=planfile.tfplan
